--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -36,262 +36,7 @@ body {
 }
 /*----------------------------------------FIM DAS CONFIGURAÇÕES GERAIS------------------------------------------------*/
 
-/*--------------------------------------------DEIXANDO O SITE RESPONSIVO----------------------------------------------*/
-@media only screen and (min-width: 200px) and (max-width: 480px) {
 
-main.original {
-        display: none;
-}
-
-main.responsivo {
-    margin-bottom: 20%;
-    display: block;
-    justify-content: center;
-    padding: 0px;
-    font-family: 'League Spartan', sans-serif;
-}
-
-header.logo {
-    width: 600px;
-    height: 60%;
-}
-
-.informacoes-pessoais1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: justify;
-    padding: 0px;
-    margin: 0px;
-}
-
-.resumo1 {
-    width: 95%;
-    color: white;
-}
-
-.imagem-vivian1  img{
-    border-radius: 10px;
-     /*box-shadow: 0px 50px 50px -4px  rgba(0, 0, 0, 0.219);*/
-    animation: moveToLeft 1s ease-in-out;
-    animation-delay: 1000ms;
-     width: 70%;
-     height: 95%;
-}
-
-.tira-duvidas1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 100%;
-}
-
-.tira-duvidas-formulario1 {
-    width: 95%;
-    text-align: justify;
-    color: white;
-}
-
-section.procedimentos1 {
-    margin-top: 30px;
-    display: block;
-    text-align: center;
-    justify-content: center;
-    width: 100%;
-    margin-bottom: 30px;
-    background: rgb(249,220,137);
-    background: linear-gradient(90deg, rgba(249,220,137,1) 0%, rgba(255,250,183,1) 35%, rgba(211,169,95,1) 100%);   
-    /*background: linear-gradient(to right, rgba(243, 240, 240, 0.685) 30%, rgb(251, 251, 252) 100%);*/
-    /*background-color: #7978741f;*/
-    font-family: 'Six Caps', sans-serif;
-    font-size: 100px;
-} 
-
-.procedimentos1 > p {
-    font-size: 50%;
-    color: white;
-    
-} 
-
-section.especialidades1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    margin: 0px;
-    border-bottom: 3px solid black;
-}
-
-.lote1-1 {
-    width: 100%;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10px;
-    border-radius: 5px;
-}
-
-.lote1-1 > img {
-    width: 100%;
-    animation: moveRight 1s ease-in-out;
-    animation-delay: 1000ms;
-}
-
-.liplift-pro1 {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 50px;
-    padding-left: 30px;
-    padding-right: 30px;
-}
-
-.proc-lip1:hover {
-    transform: rotateY(180deg);
-}
-
-.proc-lip1 {
-    transition: transform 0.8s;
-	transform-style: preserve-3d;
-    width: 50%;
-}
-.proc-lip1 > img {
-    max-width: 100%;
-    border-radius: 5px;
-    
-}
-
-.txt-lip {
-    width: 50%;
-    margin-left: 5%;
-}
-
-/*------------------------------------FAQ RESPONSIVO------------------------------------*/
-.hide {
-    display: none;
-}
-
-
-.perguntas1 {
-    display: flex;
-    flex-direction: column;
-    color: white;
-    width: 100%;
-    margin-right: 15px;
-}
-
-.perguntas1 h2 {
-    text-align: justify;
-    width: 86%;
-    margin-top: 30px;
-    padding: 20px;
-    color: white;
-}
-
-#resposta-01-1 {
-    display: none;
-    text-align: justify;
-    width: 100%;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    color: white;
-}
-
-#pergunta-01-1 {
-    text-align: justify;
-    width: 95%;
-    color: white;
-}
-
-#pergunta-01-btn-1{
-    text-decoration: none;
-    color: white;
-    text-align: justify;
-    width: 100%;
-    display: flex;
-    border-bottom: 2px solid white;
-    padding: 5px;
-}
-
-#pergunta-02-btn-1{
-    text-decoration: none;
-    color: white;
-    text-align: center;
-    width: 100%;
-    display: flex;
-    border-bottom: 2px solid white;
-    padding: 5px;
-}
-
-#pergunta-02-1 {
-    text-align: justify;
-    color: white;
-    width: 95%;
-}
-
-#resposta-02-1 {
-    display: none;
-    text-align: justify;
-    width: 100%;
-    margin-top: 15px;
-    color: white; 
-}
-
-form > input {
-    border-radius: 4px;
-    margin: 3px 3px 15px 3px;
-    width: 103%;
-    padding: 10px;
-    box-shadow: 10px solid rgba(0, 0, 0, 0.342);
-    border: 0px;
-    font-family: Montserrat, sans-serif;
-}
-
-.call {
-    text-decoration: none;
-    border: 20px;
-    padding: 10px;
-    background-color: #36271C;
-    border-radius: 15px;
-    margin-left: 30%;
-    color: white;
-    text-align: center;
-}
-
-div.tt-form {
-    padding: 6px;
-    
-}
-
-.foto-formulario1 {
-    width: 100%;
-}
-
-.foot {
-    display: none;
-}
-
-.ft-res {
-    display: block;
-    color: white;
-    font-size: 10px;
-    text-align: center;
-}
-
-}
-@media only screen and (min-width: 481px) { 
-    main.original {
-        display: block;
-}
-
-main.responsivo {
-    display: none;
-}
-
-
-    
-}
-/*----------------------------------------------FIM DO SITE RESPONSIVO------------------------------------------------*/
 
 
 
@@ -300,10 +45,6 @@ header {
     text-align: justify;
 }
 
-.logo {
-    width: 10%;
-    margin-left: 10%;
-}
 /*----------------------------------------FIM DAS CONFIGURAÇÕES HEADER------------------------------------------------*/
 
 
@@ -329,18 +70,31 @@ header {
     }
   }
 
+  @keyframes animate {
+    0% {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 0.7;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
 .informacoes-pessoais {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     background: linear-gradient(360, rgba(0, 0, 0, 0.979) 0%, rgba(0, 0, 0, 0.979) 100%); 
 }
 
 .resumo {
     font-size: 20px;
     text-align: justify;
-    margin-left: 10%;
     width: 50%;
+    margin-left: 10%;
     margin-top: 150px;
     color: white;
     font-family: 'Raleway', sans-serif;
@@ -350,63 +104,48 @@ header {
     width: 50%;
     animation: moveToLeft 1s ease-in-out;
     animation-delay: 1000ms;
+    margin-left: 5%;
 }
 
 .imagem-vivian > img {
-    border-radius: 10px;
+    border-radius: 2px;
      /*box-shadow: 0px 50px 50px -4px  rgba(0, 0, 0, 0.219);*/
-    /* animation: moveToLeft 1s ease-in-out;
+    /* animation: moveToLeft 1s ease-in-out;yyyyyyyyymgyymgyyyyyyyyyyyyyrhyyyyyyyhymyyyyyyyyyydhrryyhyyrhyyyyy
     animation-delay: 1000ms;*/
      width: 80%;
      height:auto;
 }
 
+.exp-proc {
+    margin-top: 10%;
+    display: block;
+    flex-direction: row;
+}
+
+.exp-proc picture {
+    display: block;
+    text-align: center;
+}
+
+.pt-01 {
+    display: flex; 
+    flex-direction: row;
+    width: 85%;
+}
+
+.exp-proc p {
+    text-align: center;
+    margin-left: 10%;
+    margin-right: 15%;
+}
+
+.pt-01 p {
+    text-align: center;
+    margin-left: 12%;
+    
+}
+
 /*---------------------------------------------FIM DO RESUMO VIVIAN--------------------------------------------------*/
-
-/*-----------------------------------------------PROCEDIMENTOS---------------------------------------------------------*/
-.procedimentos {
-    margin-top: 30px;
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    width: 100%;
-    margin-bottom: 30px;
-    background: rgb(249,220,137);
-    background: linear-gradient(90deg, rgba(249,220,137,1) 0%, rgba(255,250,183,1) 35%, rgba(211,169,95,1) 100%);   
-    /*background: linear-gradient(to right, rgba(243, 240, 240, 0.685) 30%, rgb(251, 251, 252) 100%);*/
-    /*background-color: #7978741f;*/
-    font-family: 'Six Caps', sans-serif;
-    font-size: 100px;
-}
-
-div.procedimento-lipfift > p {
-    margin-top: 30px;
-    font-family: 'Philosopher', sans-serif;
-    font-size: 2em;
-}
-
-div.procedimento-lipfift {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    font-size: 20px;
-    text-align: center;
-}
-
-.procedimentos h2 {
-    /*background: linear-gradient(45deg, rgba(1, 13, 13, 0.322) 0%, rgba(253, 187, 45, 0.466) 100%); */
-    /*border-top: 2px solid black; 
-    border-bottom: 2px solid black;  */ 
-    width: 60%;    
-    height: auto;
-    display: flex;
-    justify-content: center;
-    opacity: 0.5;
-    font-size: 50px;
-    align-items: center;
-
-}
-/*-----------------------------------------------FIM DOS PROCEDIMENTOS-------------------------------------------------*/
 
 /*------------------------------------------------TITULO ESPECIALIDADES------------------------------------------------*/
 .tt-especialidades {
@@ -423,76 +162,40 @@ div.procedimento-lipfift {
 
 /*-----------------------------------------------ESPECIALIDADES--------------------------------------------------------*/
 .tt-servicos {
-    color: #FCE259; 
+    color: rgba(253, 187, 45, 0.466); 
     font-family: 'Brown Sugar'; 
     padding: 30px; 
     text-align: center; 
     margin-top: 30px;
 }
 
-
 .especialidades { 
     display: flex;
-    justify-content: space-between;
-    width: 74%;
     flex-wrap: wrap;
-    row-gap: 30%;
-    margin: 2% 12% 2% 12%;
+    justify-content: space-between;
+    text-align: justify;
+    color: white;
+    width: 90%;
+    margin: 2%;
     padding-bottom: 50px;
-    border-bottom: 3px solid black;
-}
-
-.lote1 {
-    box-shadow: 7px 7px 13px 0px rgba(50, 50, 50, 0.22);
-    margin-top: 10%;
-    width: 30%;
-    height: 450px;
-    transition: all 0.3s ease-out;
-    background: linear-gradient(45deg, rgba(1, 13, 13, 0.322) 0%, rgba(253, 187, 45, 0.466) 100%); 
-    border-top-left-radius: 60px;
-    /*border-left: 3px solid #36271C;*/
-  }
-  
-
-  .lote2 {
-    box-shadow: 7px 7px 13px 0px rgba(50, 50, 50, 0.22);
-    margin-top: 50px;
-    width: 27%;
-    height: 60px;
-    transition: all 0.3s ease-out;
-    background: linear-gradient(45deg, rgba(253, 187, 45, 0.466) 0%, rgba(0, 0, 0, 0.788) 100%); 
-    border-top-left-radius: 10px;
-    margin-right: 10%;
-    color: wheat;
+    height: 100%;
     font-family: 'Raleway', sans-serif;
-    font-weight: bold;
-    /*border-left: 3px solid #36271C;*/
-  }
-
-  .lote2 p {
-    padding: 15px;
+    /*border-radius: 20px;
+    border: 3px solid rgba(253, 187, 45, 0.466);*/
 }
+ 
 
-.lote2:hover {
-    transition: transform 0.8s;
-	transform-style: preserve-3d;
-    width: 50%;
+.logo-vivian {
+    width: 90%; 
+    margin-left: 87%; 
+    margin-top: 60px;
 }
+ 
+
  
 /*-----------------------------------------------FIM ESPECIALIDADES-----------------------------------------------------*/
 
 /*-----------------------------------------------MÉTODO LIPLIFT PRINCIPAL-----------------------------------------------*/
-@keyframes changeBackgroundColor {
-    0% {
-    background-image: url(./images/lip-02.JPG);
-    }
-    50% {
-    background-image: url(../images/lip-01.JPG);
-    }
-    100% {
-      background-color: #001F3F;
-    }
-  }
 
 .slide-controller:nth-child(1):checked ~ .slide-show .slides-list{--selected-item: 0;}
 .slide-controller:nth-child(2):checked ~ .slide-show .slides-list{--selected-item: 1;}
@@ -508,7 +211,7 @@ div.procedimento-lipfift {
   --selected-item: 0;
   --total-items: 4;
   list-style-type: none;
-  margin: 10px 0;
+  margin-top: 30px;
   padding: 0;
   position: relative;
   left: calc(var(--selected-item) * -100%);
@@ -517,77 +220,69 @@ div.procedimento-lipfift {
   display: grid;
   grid-auto-flow: column;
   grid-auto-columns: 1fr;
+  margin-top: 10px;
 }
   
 .liplift-pro {
+    color: white;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    text-align: center;
     margin-top: 50px;  
-    padding: 50px;
-    width: 90%;
+    width: 100%;
+    border-radius: 20px;
+    background-color: rgba(253, 187, 45, 0.315);
+    box-shadow: 7px 7px 13px 0px #47401d;
 }   
 
 .proc-lip {
     width: 50%;
     padding: 0px;
     text-align: center;
+    
+}
+
+.liplift-pro h1 {
+    margin-left: 5%;
+    color: #FCE259;
+    font-size: 35px;
+    font-weight: 200;
+    font-family: 'Raleway', sans-serif;
 }
 
 .proc-lip img {
     padding: 0px;
-    width: 500px;
-   height: 500px;
-   border-radius: 5px;
+    width: auto;
+    height: 500px;
+    border-radius: 5px;
+  
 }
 
-/*.proc-lip:hover {
-    transform: rotateY(180deg);
-}
-
-.proc-lip {
-    transition: transform 0.8s;
-	transform-style: preserve-3d;
-    width: 50%;
-}
-.proc-lip > img {
-    width: 80%;
-    border-top-right-radius: 60px;
-    border-top-left-radius: 60px;
-}
-*/
 .txt-lip {
-    text-align: justify;
-    width: 40%;
+    width: 50%; 
+    margin-top: 100px;
+    font-family: 'Raleway', sans-serif;
+}
+
+.txt-lip span {
+    background-color: #FCE259;
+    text-decoration: none;
+    font-weight: bold;
+    border: 20px;
+    padding: 10px;
+    border-radius: 15px;
+    color: white;
+    text-align: center;
+}
+
+.txt-lip a {
+    text-decoration: none;
 }
 
 /*------------------------------------------FIM DO MÉTODO LIPLIFT PRINCIPAL---------------------------------------------*/
 
-/*--------------------------------------------FORMULÁRIO TIRA DUVIDAS---------------------------------------------------*/
-.tira-duvidas {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.979) 0%, rgba(235, 187, 82, 0.712) 110%); 
-}
 
-
-.tira-duvidas-formulario {
-    width: 50%;
-    text-align: justify;
-    margin-top: 10%;
-}
-
-form > input {
-    border-radius: 4px;
-    margin: 3px 3px 15px 3px;
-    width: 93%;
-    padding: 15px;
-    box-shadow: 10px solid rgba(0, 0, 0, 0.342);
-    border: 0px;
-    font-family: 'Raleway', sans-serif;
-}
 
 .call {
     text-decoration: none;
@@ -595,9 +290,8 @@ form > input {
     padding: 10px;
     background-color: #FCE259;
     border-radius: 15px;
-    margin-left: 30%;
+    margin-left: 40%;
     color: black;
-   
     box-shadow: 7px 7px 13px 0px rgba(156, 133, 133, 0.817);
 }
 
@@ -608,88 +302,7 @@ form > input {
     font-weight: bold;
 }
 
-.foto-formulario {
-    width: 120%;
-    margin-left: -20px;
-}
-/*--------------------------------------FIM DO FORMULÁRIO TIRA DUVIDAS---------------------------------------------------*/
 
-/*------------------------------------------------PERGUNTAS--------------------------------------------------------------*/
-.hide {
-    display: none;
-    
-}
-
-.perguntas {
-    display: flex;
-    flex-direction: column;
-    color: white;
-    
-    width: 65%;
-    margin-top: 30px;
-    margin-left: 16%;
-    margin-right: 15%;
-    
-}
-
-.perguntas span {
-    width: 65%;
-}
-
-.perguntas h2 {
-    text-align: center;
-    padding: 30px;
-    color: white;
-}
-
-#resposta-01 {
-    display: none;
-    text-align: justify;
-    width: 100%;
-    padding: 15px;
-    color: white;
-}
-
-#pergunta-01 {
-    text-align: justify;
-    width: 100%;
-    color: white;
-}
-
-#pergunta-01-btn{
-    text-decoration: none;
-    color: white;
-    text-align: justify;
-    width: 100%;
-    display: flex;
-    border-bottom: 2px solid white;
-    padding: 5px;
-}
-
-#pergunta-02-btn{
-    text-decoration: none;
-    color: white;
-    text-align: center;
-    width: 100%;
-    display: flex;
-    border-bottom: 2px solid white;
-    padding: 5px;
-}
-
-#pergunta-02 {
-    text-align: justify;
-    color: white;
-}
-
-#resposta-02 {
-    display: none;
-    display: none;
-    text-align: justify;
-    width: 100%;
-    padding: 15px;
-    color: white;
-}
-/*----------------------------------------------FIM DAS PERGUNTAS--------------------------------------------------------*/
 
 /*-----------------------------------------------------FOOTER------------------------------------------------------------*/
 .foot {
@@ -700,15 +313,152 @@ form > input {
     background: black;
 }
 
-
-/*
-li{
-    display: flex;
+.foot a {
     text-decoration: none;
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    list-style: lower-alpha;
-    background-color: #CCA36B;
-}*/
+    color: white;
+}
+
 /*-----------------------------------------------FIM DO FOOTER-----------------------------------------------------------*/
+
+
+
+@media only screen and (min-width: 200px) and (max-width: 480px) {
+   
+    * {
+        margin: 0px;
+        padding: 3px;
+    }
+
+   
+    main {
+        display: flex;
+        flex-direction: column;
+        margin: 0px;
+        height: auto;
+        margin-top: 0px;
+        
+    }
+    
+    .informacoes-pessoais, .liplift-pro, .especialidades, .tira-duvidas {
+        display: flex;
+        flex-direction: column;
+        width: auto;
+        text-align: center;
+        margin-left: 0%;
+    }
+
+    .resumo {
+        width: auto;
+        margin-top: 0px;
+        height: auto;
+        margin-left: 0%;
+        margin-bottom: 30px;
+    }
+
+    .imagem-vivian {
+        width: auto;
+        margin-top: 20px;
+
+    }
+
+    .txt-exp p {
+        text-align: center;
+        margin-left: 2%;
+        margin-right: 2%;
+    }
+
+    .art-ser {
+        display: flex;
+        flex-direction: row;
+        margin: 0px;
+        padding: 0px;
+    }
+
+    .especialidades { 
+        display: flex;
+        text-align: center;
+        width: auto;
+        flex-wrap: wrap;
+        padding-bottom: 50px;
+        margin-top: 20%;
+        padding: 0px;
+        
+    }
+
+    .especialidades ul,h3 {
+        margin-left: 10px;
+    }
+
+    .logo-vivian {
+        width: 90%; 
+        margin-left: 5%; 
+        margin-top: 60px;
+    }
+     
+
+    .call {
+        text-decoration: none;
+        border: 20px;
+        padding: 10px;
+        background-color: #FCE259;
+        border-radius: 15px;
+        margin-left: 30%;
+        color: black;
+        box-shadow: 7px 7px 13px 0px rgba(156, 133, 133, 0.817);
+    }
+
+    .especialidades {
+        margin: 20px;
+    }
+
+    
+    section.liplift-pro {
+        background-color: black;
+        box-shadow: 7px 7px 13px 0px #070600;
+        border-radius: 0px;
+        margin-bottom: 50px;
+    }
+
+    .proc-lip {
+        display: none;
+    }
+
+    .proc-resp {
+      display: block;
+      flex-direction: column;
+    }
+
+    /*.proc-lip, .txt-lip {
+        width: 100%;
+       
+        align-items: center;
+        text-align: center;
+    }*/
+
+    .txt-lip {
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    .pt-01 {
+        display: flex;
+        flex-direction: column;
+        width: auto;
+    }
+
+    .pt-01 p {
+        text-align: center;
+        padding: 2%;
+    }
+
+    picture p {
+        text-align: center;
+    }
+ 
+}   
+
+@media only screen and (min-width: 481px) { 
+    div.proc-resp {
+        display: none;
+    }
+}
