--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -54,7 +54,7 @@ header {
 
 @keyframes moveToLeft {
     from {
-      transform: translateX(300px);
+      transform: translateX(320px);
     }
     to {
       transform: translateY(0px);
@@ -99,22 +99,18 @@ header {
     color: white;
     font-family: 'Raleway', sans-serif;
 }
-
-.imagem-vivian {
-    width: 50%;
-    animation: moveToLeft 1s ease-in-out;
-    animation-delay: 1000ms;
-    margin-left: 5%;
-}
+ 
 
 .imagem-vivian > img {
     border-radius: 2px;
-     /*box-shadow: 0px 50px 50px -4px  rgba(0, 0, 0, 0.219);*/
-    /* animation: moveToLeft 1s ease-in-out;yyyyyyyyymgyymgyyyyyyyyyyyyyrhyyyyyyyhymyyyyyyyyyydhrryyhyyrhyyyyy
-    animation-delay: 1000ms;*/
-     width: 80%;
-     height:auto;
+     width: 100%;
 }
+
+.imagem-vivian  {
+    width: 50%;
+    margin-right: 10%;
+}
+
 
 .exp-proc {
     margin-top: 10%;
@@ -347,6 +343,11 @@ header {
         margin-left: 0%;
     }
 
+    .informacoes-pessoais .viviann{
+        width: 327px;
+        margin-left: 0px;
+    }
+
     .resumo {
         width: auto;
         margin-top: 0px;
@@ -356,9 +357,9 @@ header {
     }
 
     .imagem-vivian {
-        width: auto;
+        width: 363px;
         margin-top: 20px;
-
+        height: 100%;
     }
 
     .txt-exp p {
